--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,7 +1,16 @@
 # Docker
 # Build and push an image to Azure Container Registry
 # https://docs.microsoft.com/azure/devops/pipelines/languages/docker
-
+- task: Kubernetes@1
+  inputs:
+    connectionType: 'Azure Resource Manager'
+    azureSubscriptionEndpoint: 'joeOrgPipelinecon'
+    azureResourceGroup: 'test'
+    kubernetesCluster: 'joeapp'
+    namespace: 'default'
+    command: 
+    secretType: 'dockerRegistry'
+    containerRegistryType: 'Azure Container Registry'
 trigger:
 - master
 
